kustomizations/longhorn/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-istiod
  namespace: longhorn-system
spec:
  egress:
    - ports:
        - port: 15012
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: istio-controlplane
          podSelector:
            matchLabels:
              app: istiod
  podSelector: {}
  policyTypes:
    - Egress
